<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="trabalho.fiap.com.br.trabalho29scjapp.LoginActivity">

        <TextView
            android:id="@+id/lblUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edtUsuario"
            android:layout_alignBottom="@+id/edtUsuario"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/usuario" />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lblSenha"
            android:layout_marginBottom="41dp"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:layout_toEndOf="@+id/lblUsuario"
            android:layout_toRightOf="@+id/lblUsuario"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/edtUsuario"
            android:layout_toStartOf="@+id/edtUsuario"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtUsuario"
            android:layout_alignStart="@+id/edtUsuario"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtSenha"
            android:layout_alignStart="@+id/edtSenha"
            android:layout_below="@+id/edtSenha"
            android:layout_marginTop="31dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnCriar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnLogin"
            android:layout_alignBottom="@+id/btnLogin"
            android:layout_alignEnd="@+id/edtSenha"
            android:layout_alignRight="@+id/edtSenha"
            android:text="@string/criar" />

</RelativeLayout>
