<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="trabalho.fiap.com.br.trabalho29scjapp.AboutActivity">

    <ImageView
        android:id="@+id/ic_logo_legal"
        android:layout_width="237dp"
        android:layout_height="196dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ic_logo_legal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/version"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/autor"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="121dp" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/voltar"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="414dp" />

</RelativeLayout>
