<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="trabalho.fiap.com.br.trabalho29scjapp.CreateUserActivity">

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="60dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="55dp" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/edtUsuario"
        android:layout_alignStart="@+id/edtUsuario"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:text="@string/usuario" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="47dp"
        android:text="@string/senha" />

    <Button
        android:id="@+id/criar_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/criar"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="414dp" />
</RelativeLayout>
