<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="trabalho.fiap.com.br.trabalho29scjapp.CreateUpdateActivity">

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="105dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="55dp" />

    <EditText
        android:id="@+id/edtValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtDescricao"
        android:layout_alignStart="@+id/edtDescricao"
        android:layout_below="@+id/edtDescricao"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="185dp" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtNome"
        android:layout_alignStart="@+id/edtNome"
        android:layout_below="@+id/edtNome"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtValor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:text="@string/valor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtDescricao"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:text="@string/nome" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtDescricao"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/descricao" />

</RelativeLayout>
